syntax = "proto3";

option csharp_namespace = "Generated";

message HalloRequest
{
	string Name = 1;
}